1. slider 그리기 및 구성 부분을 SliderSetting파일로 분리 2. 이미지가 바로 뜨기 위해 warm up 기능 추가 3. 현재 array의 끝에 도달할 때 미리 불러온 Array를 swap 기능 추가

--- a/FlickrSlide/Info.plist
+++ b/FlickrSlide/Info.plist
@@ -42,5 +42,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SFText-Heavy.otf</string>
+		<string>SFText-Regular.otf</string>
+	</array>
 </dict>
 </plist>
